message SubMsg
{ 
	required string		name = 1;
	optional int32		age = 2;
	repeated int32		array = 3;
}

message MainMsg
{ 
	required SubMsg		req_sub = 1; 
	optional SubMsg		opt_sub = 2;
	repeated SubMsg		rep_sub = 3;
}
